cw_cli/kubeconfigs/dev-pod/devpod.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devpod-2
  namespace: default
  labels:
    app: devpod-2
spec:
  serviceName: "devpod-2"
  replicas: 1
  selector:
    matchLabels:
      app: devpod-2
  template:
    metadata:
      labels:
        parasail.io/deployment: parasail-devpod-2
        parasail.io/owner: parasail
        app: devpod-2
    spec:
      nodeSelector:
        parasail-gpu-type: H200SXM
      tolerations:
      - key: sunk.coreweave.com/nodes
        operator: Exists
      containers:
      - name: dind
        image: docker:dind
        securityContext:
          privileged: true
        args:
        - "--host=tcp://0.0.0.0:2375"
        - "--tls=false"
        volumeMounts:
        - name: docker-graph-storage
          mountPath: /var/lib/docker
        - name: devpod-storage
          mountPath: /workspace/data
          subPath: dind-workspace
      - name: devpod
        image: ghcr.io/tcapelle/triton_eval:1006
        ### Run start with an infinite sleep loop
        securityContext:
          privileged: true
        resources:
          limits:
            nvidia.com/gpu: "8"
            cpu: "64"
            memory: "1200Gi"
          requests:
            cpu: "64"
            memory: "1200Gi"
            nvidia.com/gpu: "8"
        command:
        - /bin/sh
        - -c
        - |
          [...]
        ports:
        - containerPort: 2375
          name: docker
        - containerPort: 22
          name: ssh
        volumeMounts:
        - name: shared-tools
          mountPath: /shared
        - name: devpod-storage
          mountPath: /workspace/data
        - name: ssh-keys
          mountPath: /etc/ssh-keys
          readOnly: true
        - name: dshm
          mountPath: /dev/shm
        - name: model-checkpoints
          mountPath: /model-checkpoints
      volumes:
      - name: shared-tools
        emptyDir: {}
      - name: ssh-keys
        configMap:
          name: devpod-2-ssh-keys
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 132Gi
      - name: model-checkpoints
        persistentVolumeClaim:
          claimName: model-checkpoints
  volumeClaimTemplates:
  - metadata:
      name: docker-graph-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Gi
  - metadata:
      name: devpod-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Gi
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: devpod-2-ssh
  namespace: default
spec:
  entryPoints:
    - parasailssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: devpod-2
          namespace: default
          port: 22

---
apiVersion: v1
kind: Service
metadata:
  name: devpod-2
  namespace: default
  labels:
    app: devpod-2
spec: 
  clusterIP: None
  selector:
    app: devpod-2
    statefulset.kubernetes.io/pod-name: devpod-2-0
  ports:
  - port: 2375
    name: docker
    targetPort: 2375
  - port: 22
    name: ssh
    targetPort: 22
